<resources>
    <string name="app_name">ujiantengahsemester</string>
    <string name="skip">Skip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="not_setting_up_yet">Not Setting Up Yet</string>
    <string name="login">Sign In</string>
    <string name="or">OR</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="sign_up_to_see_my_apps">Sign Up to See My Apps</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re Type Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="tap_the_button_to_log_out_from_apps">Tap the button to Log Out From Apps</string>
    <string name="log_out">Log Out</string>
    <string name="signout">SignOut</string>
    <string name="teman">Teman</string>
    <string name="kontak">Kontak</string>
    <string name="profil">Profil</string>
    <string name="edit_data">Add Data</string>
    <string name="nim">nim</string>
    <string name="name">name</string>
    <string name="c">class</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="sosmed">sosmed</string>
    <string name="save">save</string>
</resources>
