<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/editDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_data"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/edit_nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/nim"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/edit_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/c"/>

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/edit_sosmed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sosmed"/>

    <Button
        android:id="@+id/save_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@android:color/white"/>
</LinearLayout>