<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/login"/>

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_marginTop="32dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/background_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_signup"
        android:text="@string/sign_up_here"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/background_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>